# gcfrct

./: .gitignore  CMakeLists.txt  README.md  gcfrct.cpp  gcfrct.gschema.xml  resources.xml
src/: CMakeLists.txt  GcfrctAppWindow.cpp  GcfrctAppWindow.hpp  GcfrctApplication.cpp  GcfrctApplication.hpp  GcfrctApplicationWindow.cpp  GcfrctApplicationWindow.hpp  GcfrctPreferences.cpp  GcfrctPreferences.hpp
src/gtest/: CMakeLists.txt  GcfrctApplicationTest.cpp
ui/: GcfrctApplicationWindow.ui  gcfrct.ui
