set(${CMAKE_PROJECT_NAME}_SRC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
file(GLOB ${CMAKE_PROJECT_NAME}_HEADERS CONFIGURE_DEPENDS *.hpp)
file(GLOB ${CMAKE_PROJECT_NAME}_SOURCES CONFIGURE_DEPENDS *.cpp)
add_library(${CMAKE_PROJECT_NAME}_OBJECTS OBJECT ${${CMAKE_PROJECT_NAME}_SOURCES})
set(${CMAKE_PROJECT_NAME}_SRC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_options(${CMAKE_PROJECT_NAME}_OBJECTS PRIVATE ${GTKMM_CFLAGS})
add_subdirectory(gtest)
