
find_package(GTest REQUIRED)
include(GoogleTest)
file(GLOB TEST_SOURCES CONFIGURE_DEPENDS *Test.cpp)
foreach(TEST_SOURCE ${TEST_SOURCES})
    get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_SOURCE} $<TARGET_OBJECTS:${CMAKE_PROJECT_NAME}_OBJECTS>)
    target_include_directories(${TEST_NAME} PRIVATE ${${CMAKE_PROJECT_NAME}_SRC_INCLUDE_DIRS})
    target_compile_options(${TEST_NAME} PRIVATE ${GTKMM_CFLAGS})
    target_link_libraries(${TEST_NAME} ${GTEST_BOTH_LIBRARIES} ${GTKMM_LINK_LIBRARIES})
    gtest_discover_tests(${TEST_NAME})
endforeach()
